--- a/analyse_two_series.ipynb
+++ b/analyse_two_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "48000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,31 +172,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stft_hop = int(sample_rate * 23 / 1000) # 23 ms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eps = 1e-12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "stft_hop = int(sample_rate * 23 / 1000) # 23 ms\n",
+    "\n",
+    "eps = 1e-12\n",
+    "\n",
     "mel_A = get_mel_spectrogram(samplesA) \n",
     "mel_B = get_mel_spectrogram(samplesB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,94 +718,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_m_profiles(  A, B,\n",
-    "                         motif_lengths = [30, 100],\n",
-    "                         channels = [2, 10],\n",
-    "                         name = 'profiles1'\n",
-    "                        ):\n",
-    "    '''\n",
-    "    Purpose: Compute many matrix profiles.\n",
-    "    \n",
-    "    A[chnnl, time], B[chnnl, time] --- time series\n",
-    "    motif_lengths --- \n",
-    "    channels  ---- channels for computation\n",
-    "    '''\n",
-    "    \n",
-    "    profiles = defaultdict(dict)\n",
-    "    \n",
-    "    for motif_len in tqdm(motif_lengths):\n",
-    "        for channel in channels:\n",
-    "            \n",
-    "            # compute matrix profile\n",
-    "            m_profile, m_idx = get_m_profile(A[channel, :], B[channel, :], motif_len)\n",
-    "            profiles[channel][motif_len] = (m_profile, m_idx)\n",
-    "            \n",
-    "            # save the matrix profile\n",
-    "            with open(name + '.pickle', 'wb') as hdl: # overwriting (erasing) older file\n",
-    "                pickle.dump(profiles, hdl, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████| 2/2 [00:10<00:00,  5.19s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "compute_m_profiles(mel_A[:,:1000], mel_B[:,:1000])"
+    "compute_m_profiles(mel_A[:,:1000], mel_B[:,:1000]);"
    ]
   },
   {
